# udev_RUST

./: .gitignore  Cargo.toml  LICENSE  README.md  row.py
rules/: 99-custom.rules
src/: actions.rs  device.rs  lib.rs  libudev.rs  main.rs  monitor.rs  udevadm.rs  udevd.rs
src/rules/: matcher.rs  mod.rs  parser.rs
test/: test_rules.rs
