[package]
name = "rust_udev"
version = "0.1.0"
edition = "2021"
authors = ["Yizhangmi UESTC"]

[dependencies]
nix = { version = "0.26", features = ["socket"] }
clap = "4.0"
libc = "0.2.172"
log = "0.4"
env_logger = "0.9"
rayon = "1.10.0"
users = "0.11"
regex = "1.11.1"
notify = "6.1.1" 
crossbeam = "0.8"  